examples/passing/semantics/lock.gm
lock l1;
unlock l1;
